src/Components/UI/Project/Project.css
#MUI-Card {
	width: 500px;
	max-width: 90vw;
	overflow: show;
	margin-top: 20px !important;
	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
	background-color: transparent !important;
	position: relative;
	z-index: 0;
}

.card-modal {
	width: 100%;
	height: 100%;
	overflow: auto;
	max-height: 90vh;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	gap: 16px;
	max-width: 1400px;
}

#card-media {
	width: 100%;
	height: 250px;
	cursor: url("../../../images/ring-pointer.png"), 4 4, pointer !important;
}

.card-title-div {
	position: absolute;
	top: -40px;
	left: -40px;
	z-index: 1;
	padding: 10px;
	background: rgba(255, 255, 255, 0.1);
	border-radius: 10px;
	width: max-content;
	-webkit-backdrop-filter: blur(5px);
	backdrop-filter: blur(5px);
	padding-left: 20px;
	padding-right: 20px;
}

.card-title {
	font-size: 4.7rem;
	font-weight: bold;
	text-align: left;
	opacity: 1;
	z-index: 1;
	/* underline */
	text-decoration: underline var(--secondary-color) solid;
	color: var(--secondary-color);
	width: max-content;
	padding: 0px;
	margin-top: 20px;
	margin-bottom: 40px;
}

@media (max-width: 1300px) {
	.card-title-div {
		position: relative;
		justify-content: center;
		display: flex;
		width: 100%;
		top: 0;
		left: 0;
		padding: 0px;
		-webkit-backdrop-filter: blur(0px);
		backdrop-filter: blur(0px);
		background: transparent;
	}

	.project-flag-div {
		display: none !important;
	}

	.card-title {
		font-size: 2rem;
		text-decoration-thickness: 4px;
		text-align: center !important;
		color: var(--secondary-color);
	}

	#card-media:hover {
		cursor: url("../../../images/ring-pointer.png"), 4 4, pointer !important;
	}

	.card-content-text {
		border: none !important;
	}
}

.MUI-icon {
	font-size: 3rem;
	margin-bottom: -25px;
}

@media (min-width: 1301px) {
	#MUI-Card {
		margin-left: 0px !important;
		margin-right: 0px !important;
		width: 100% !important;
		max-width: 90vw;
		width: 100%;
		font-size: 1.2rem;
		height: 100%;
		min-height: 525px;
	}

	#card-media {
		width: 100%;
		height: 525px;
		image-rendering: pixelated;
		cursor: url("../../../images/ring-pointer.png"), 4 4, pointer !important;
	}

	.card-title {
		font-size: 4.5rem;
	}

	.card-content {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: space-around;
	}

	.project-description {
		font-size: 1.25rem;
	}

	.icon-div {
		width: 100%;
		display: flex;
		flex-direction: row;
		justify-content: space-evenly;
	}

	.card-content-text {
		display: flex;
		flex-direction: column;
		justify-content: space-around;
		align-items: center;
		height: 480px;
	}

	.MUI-icon:hover {
		transform: scale(1.5);
		transition: transform 0.5s ease-in-out;
		color: var(--secondary-color);
		transform: translateY(-5px);
	}

	@media (min-width: 1300px) {
		.MuiCardHeader-title {
			text-align: left;
		}

		#card-media {
			width: 1000px !important;
			max-width: 100% !important;
			cursor: url("../../../images/ring-pointer.png"), 4 4, pointer !important;
		}
	}
}

.card-title-div {
	opacity: 0;
	transition: opacity 1s ease-in-out;
}

.fade-in {
	opacity: 1;
}

.fade-in-hidden {
	opacity: 0;
}

